# RocketSim

./: pyproject.toml
src/CollisionMeshFile/: CollisionMeshFile.h
